# Master-CMake-Udemy

./: README.md
CMake Tutorial/m1l1_Building_a_C++_Project_using_G++/v1/: main.cpp
CMake Tutorial/m2l3_Generating_the_First_Executable_using_CMake/: CMakeLists.txt
CMake-Tutorial/m2l3_Generating_the_First_Executable_using_CMake/: CMakeLists.txt
CMake-Tutorial/m2l4_Generating_the_First_Library/: CMakeLists.txt
CMake-Tutorial/m4l1_Normal_Variables/: CMakeLists.txt
CMake-Tutorial/m4l4_Lists_and_Strings/: CMakeLists.txt
CMake-Tutorial/m5l1_If_Else_Command/: CMakeLists.txt
CMake-Tutorial/m5l5_Scopes/v2_directory_scope/: CMakeLists.txt
